Corrected margin to match previous spacing and removed comment #411

--- a/src/proto/checkable.css
+++ b/src/proto/checkable.css
@@ -69,9 +69,8 @@
 
     & > :first-child
     {
-        /* display:        inline-block; */
         vertical-align: middle;
-        margin-left:    3rem;
+        margin-left:    3.2rem;
     }
 }
 
